<resources>
    <string name="app_name">BNC</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_about">ABOUT</string>
    <string name="menu_departments">DEPARTMENTS</string>
    <string name="menu_faculty">FACULTY</string>
    <string name="menu_students">STUDENTS</string>
    <string name="menu_academics">ACADEMICS</string>
    <string name="menu_admission">ADMISSION</string>
    <string name="menu_research">RESEARCH</string>
    <string name="menu_facilities">FACILITIES</string>
    <string name="menu_naac">NAAC</string>
    <string name="menu_feedback">FEEDBACK</string>
    <string name="menu_gallery">GALLERY</string>
    <string name="menu_logout">LOGOUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="college_description">
    Bihar National College, popularly known as B. N. College was established in 1889 by two avid educationists and nationalists Babu Bisheswar Singh and Shaligram Singh of Kulharia Raj, Bhojpur, Bihar. During the colonial yoke after Indian National Congress was formed in 1885, these two brothers felt the crying need to stoke up nationalist feelings amongst the students christened this college Bihar National College, but the then British Government mounted much pressure upon them to delete the word National and promised to give the title of Raja and a very big Jagir. But as these brothers were different from the other zamindars in the sense that while others considered the dissemination of education a grave threat to their existence, these Singh brothers were committed to the ennobling and lofty causes of education, they did not succumb to the pressures. At that time Bisheswar Singh was a student of final year (law) at Calcutta College of Law. The Governor General of Calcutta expelled him from the college. Not only this when Bisheswar Singh started practising law at Patna civil court after obtaining the PL certificate, but he was also not allowed to sit in the Bar Association. He had to encounter umpteen trails and tribulations. The Govt. declared them to be Vidrohi and eventually Shaligram Singh\'s son ShashiShekhar Singh, the father of Justice K. B. N. Singh was shot dead in 1942. Therefore, this National word is very meaningful with a long and glorious history, which still informs the students with nationalist feelings and emotions. Jagpati Kumar, who is among the seven martyrs, was a student of this college.\n\n
    Initially, the college imparted education in English, Sanskrit, Persian, Hindi, Philosophy etc. up to Honours level. For the first time in Bihar, this college initiated the teaching of Law. Prof. Atmaram, who later on became the Principal of Patna College was the first-in-charge of the faculty of Law. These days this college imparts Hons. Level education in three faculties, the faculty of humanities, the faculty of Science and the faculty of Social Sciences. The teaching at the postgraduate level is being imparted in English. Four vocational courses: Functional English, Biotechnology, BCA, and BBA are being run successfully and efficiently. Many students have proved their merit of the global level.\n\n
    In 1892, Calcutta University granted it the status of first level college. In 1923, this college was taken under Govt. control with the efforts of the then commissioner of Patna Accdale Earleo and was given the status of full deficit grant college. In 1952, this college was converted into a constituent unit of the Patna University.\n\n
    This college has basked in the glorious sunshine of history in all domains of life. It has been the crucible for churning out a galaxy of singular scintillating intellectual gems who have done proud not only to Bihar, but to the entire globe with their charismatic intellectual exploits. The college has flourished stupendously under the dynamic and energetic principals like Mr. Akshay Kumar Mazumdar, Dr. D. N. Sen, Moinul Hague, Dr. D. P. Vidyarthi, Dr. S. K. Bose, Dr. Amarnath Sinha, Dr. M. P. Sinha, Dr. P. K. Poddar and others. The college is the role model to other educational institutions of the country. It has been successful in infusing robust faith in the hoi polloi of the state. At present, the college is making tremendous strides in the holistic development of students under the dynamic, charismatic and iconic personality of Dr. Rajkishore Prasad..\n\n
    Located in a beautiful campus on the bank of the holiest river of the universe the Ganges, B. N. College has a brobdingnagian and leviathan size in its academic achievements in providing quality education to both boys and girls. This college is permanently affiliated under section 12B of UGC Act 1952. It has been accredited with B++ grade by the UGC NAAC Peer Team in 2003. It is a College with potential for excellence (CPE) status accorded by the UGC vide letter no. F. 12-1/2010 (NS/PE) dated 07th December, 2011\n\n
    The students and teachers of this college have carved niche in each and every field of the society and have been the torch-bearers and pioneers in various fields. Dr. Moinul Haque, the principal of this college led the Indian Olympic Team. To mark his memory Moinul Haque Stadium has been established in Rajendra Nagar, Patna. Lal Narayan Sharma, first attorney general of India, Prof. Siddheshwar Prasad, Central Minister for 11 years and former governor of Tripura, Dr. Bindeshwar Pathak, the founder of Sulabh International and Padma Bhusan Awardee, Lalu Prasad Yadav, Ex-Chief Minister of Bihar and Ex- Railway Minister Govt. of India, Mihir Kumar Jha, Hon’ble Justice, Patna High Court, etc. have been the alumni of this college. The Padma Award winners such as Dr. Moinul Haque (Padma Shree in 1971), Dr. Kalim Aziz (Padma Shree in 1989), Dr. Shailendra Nath Srivastava (Padma Shree in 2003), Dr. Sharfe Alam (Padma Shree in 2012), Dr. Bindeshwar Pathak (Padma Bhushan in 1984) have been either the teachers or the students of this college. The Arjuna Award winner C. Prasad, the Captain of Indian Football Team in 1970, the Sahitya Academy Award winners Prof. Arun Kamal and Sri Ganendra Pati, the winner and member of the Indian Golf Team Mr. Aman Raj havebeen our students. The writer of more than fifty books and translator of Sri Ramcharitramanas- Dr. R. C. Prasad, Dr. R. C. P. Sinha who translated Homer’s Iliad and Odyssey into Hindi, Dr. Rameshwar Singh Kashyap, the dramatist who created Loha Singh, Dr. Abdul Moghni who contributed a lot to Urdu literature, etc. have been the teachers of this college.\n\n
    Along with the Bachelor degree courses in 18 subjects, the college offers M. A. in English and is going to start M. A. course in many other subjects. It provides several vocational courses both under UGC and self-financing schemes such as B. Sc. in Bio-Technology, BCA, Functional English and BBA.\n\n
    This college organizes annual sports, debate, guest lectures, seminars, holi milan, Eid milan and various cultural activities in collaboration with Spic Mackay and others to keep the teachers and students afresh and up to-date in every field and to bring a sense of belonging and togetherness.
</string>
    <string name="science">Science</string>
    <string name="language">Language</string>
    <string name="social_science">Social Science</string>
    <string name="vocational">Vocational</string>
    <string name="department">DEPARTMENT</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="mathematics">Mathematics</string>
    <string name="botany">Botany</string>
    <string name="zoology">Zoology</string>
    <string name="geology">Geology</string>
    <string name="statistics">Statistics</string>
    <string name="profile">PROFILE</string>
    <string name="staff">Staff</string>
    <string name="course">Course</string>
    <string name="physics_text">Physics</string>
    <string name="dr_rajkishore_prasad">Dr. Rajkishore Prasad</string>
    <string name="principal">Principal</string>
    <string name="link_for_physics_professor"><![CDATA[click <a href=\'https://www.bncollegepatna.com/profile/view_facuilty.php?sna=principal@bncollegepatna.com&email_id=principal@bncollegepatna.com\'>here</a>to visit]]></string>
    <string name="more_detail">More detail</string>
    <string name="dr_dinesh_kumar">Dr. Dinesh Kumar</string>
    <string name="assistant_professor">Assistant Professor</string>
    <string name="dr_raghwendra_kumar">Dr. Raghwendra Kumar</string>
    <string name="dr_manish_anand">Dr. Manish Anand</string>
    <string name="mr_mukesh_chandra_bos">Mr. Mukesh Chandra Bos</string>
    <string name="assistant_professor_hod"><![CDATA[Assistant professor & HOD]]></string>
    <string name="bachelor_of_science_honors_physics">Bachelor of Science(Honors) - Physics</string>
    <string name="syllabus">Syllabus</string>
    <string name="faculty_member">Faculty Member</string>
    <string name="associate_professor_head_of_department"><![CDATA[Associate professor & Head of Department]]></string>
    <string name="dr_md_faiyaz_ahsan">Dr. Md. Faiyaz Ahsan</string>
    <string name="university_professor_head_of_the_department"><![CDATA[University Professor & Head of the Department]]></string>
    <string name="dr_irshad_ali">Dr. Irshad Ali</string>
    <string name="dr_shailendra">Dr. Shailendra</string>
    <string name="university_professor">University Professor</string>
    <string name="dr_ashutosh_kumar">Dr. Ashutosh Kumar</string>
    <string name="dr_kumar_krishnanand">Dr. Kumar Krishnanand</string>
    <string name="dr_vinod_prasad">Dr. Vinod Prasad</string>
    <string name="dr_rajeev_kumar">Dr. Rajeev Kumar</string>
    <string name="guest_faculty_assistant_professor">Guest Faculty(Assistant Professor)</string>
    <string name="dr_devanand_kumar">Dr. Devanand Kumar</string>
    <string name="dr_praveen_kumar">Dr. Praveen Kumar</string>
    <string name="assistant_professor_head_of_department">Assistant Professor(Head of Department)</string>
    <string name="dr_dileep_kumar">Dr. Dileep Kumar</string>
    <string name="associate_professor">Associate Professor</string>
    <string name="kundan_patel">Kundan Patel</string>
    <string name="guest_faculty">Guest Faculty</string>
    <string name="mr_chandeswar_yadav">Mr. Chandeswar Yadav</string>
    <string name="dr_amit_kumar">Dr. Amit Kumar</string>
    <string name="dr_ashutosh_pandey">Dr. Ashutosh Pandey</string>
    <string name="dr_md_sarwar_alam">Dr. Md Sarwar Alam</string>
    <string name="dr_akhileshwar_tiwari">Dr. Akhileshwar Tiwari</string>
    <string name="dr_ram_bali_singh">Dr. Ram Bali Singh</string>
    <string name="professor">Professor</string>
    <string name="dr_ranvir_nandan">Dr. Ranvir Nandan</string>
    <string name="dr_abhay_prakash">Dr. Abhay Prakash</string>
    <string name="demonstrator">Demonstrator</string>
    <string name="dr_sunil_kumar_singh">Dr. Sunil Kumar Singh</string>
    <string name="dr_urmi_dutta">Dr. Urmi Dutta</string>
    <string name="dr_shashi_bhushan_rai">Dr. Shashi Bhushan Rai</string>
    <string name="dr_abhishek_kumar_sharma">Dr. Abhishek Kumar Sharma</string>
    <string name="dr_murari_sharma_manglik">Dr. Murari Sharma Manglik</string>


</resources>