<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">

        <item
            android:id="@+id/menu_home"
            android:title="@string/menu_home"
            android:icon="@drawable/home"
            />
        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about"
            android:icon="@drawable/about"
           />
<!--        <item-->
<!--            android:id="@+id/menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/menu_facilities"-->
<!--            android:title="@string/menu_facilities" />-->

    </group>
    <item
        android:id="@+id/menu_profile"
        android:title="PROFILE"
        android:icon="@drawable/user"
        />

    <group android:id="@+id/group2">

        <item
            android:id="@+id/menu_departments"
            android:title="@string/menu_departments"
            android:icon="@drawable/departments"/>
        <!--    <item-->
        <!--        android:id="@+id/menu_faculty"-->
        <!--        android:title="@string/menu_faculty" />-->
        <!--    <item-->
        <!--        android:id="@+id/menu_students"-->
        <!--        android:title="@string/menu_students" />-->
<!--        <item-->
<!--            android:id="@+id/menu_academics"-->
<!--            android:title="@string/menu_academics" />-->
<!--        <item-->
        <item
            android:id="@+id/menu_admission"
            android:title="@string/menu_admission"
            android:icon="@drawable/admissions"/>
        <!--        android:id="@+id/menu_research"-->
        <!--        android:title="@string/menu_research" />-->

    </group>




<!--    <item-->
<!--        android:id="@+id/menu_feedback"-->
<!--        android:title="@string/menu_feedback" />-->

    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/logout"/>
</menu>