<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gro_und"
    tools:context=".departmentsfragment">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:textSize="30sp"
        android:layout_marginHorizontal="34sp"
        android:layout_marginVertical="50sp"
        />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:columnCount="2"
        android:rowCount="2"
        >

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/gradient_background"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:text="@string/science"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            android:background="@drawable/gradient_background"
            android:gravity="center"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:text="@string/language"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:background="@drawable/gradient_background"
            android:gravity="center"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:text="@string/social_science"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:background="@drawable/gradient_background"
            android:gravity="center"
            android:minWidth="150dp"
            android:minHeight="45dp"
            android:text="@string/vocational"
            android:textSize="20sp" />
    </GridLayout>


</FrameLayout>
