<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10dp"
    tools:context=".botanyFragment">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/physics_department" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/faculty_member"
            android:textColor="@color/black"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:minHeight="70dp"
            android:text="@string/syllabus"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/line_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/arrow_background">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/image_view1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/rounded_corner"
                        android:src="@drawable/botany1" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/linear_layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview1"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dr_vinod_prasad"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textview2"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/associate_professor_head_of_department"

                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/arrow_background"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/image_view2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/rounded_corner"
                        android:src="@drawable/botany2" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/linear_layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview4"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="Dheeraj Goutam"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textview5"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/assistant_professor" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/arrow_background"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/image_view3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/rounded_corner"
                        android:src="@drawable/botany3" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/linear_layout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview7"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dr_rajeev_kumar"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textview8"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/guest_faculty_assistant_professor" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/arrow_background"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/image_view4"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/rounded_corner"
                        android:src="@drawable/botany4" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/linear_layout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview10"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dr_devanand_kumar"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/textview11"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/guest_faculty_assistant_professor" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_start"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:text="Bachelor of Science(Honors)-Botany"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/text_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:backgroundTint="@drawable/button_background_reverse"
            android:gravity="center"
            android:minWidth="180dp"
            android:minHeight="50dp"
            android:text="Download"
            android:textColor="@drawable/button_text_focus_reverse"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>